--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.12.4"
+    "mongoose": "^5.12.4",
+    "stripe": "^8.163.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
